<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_margin="20dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateUserActivity" >





    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/create_user_account"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText android:id="@+id/et_firstname"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textNoSuggestions|textCapWords|textPersonName" />

    <EditText android:id="@+id/et_lastname"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textNoSuggestions|textCapWords|textPersonName" />

    <EditText android:id="@+id/et_cu_email"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/client_email"
        android:inputType="textEmailAddress" />

    <EditText android:id="@+id/et_cu_password"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/client_password"
        android:inputType="textPassword" />

    <EditText android:id="@+id/et_cu_phonenumber"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="textPhonetic" />

    <Button
        android:id="@+id/btn_createuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_cu_phonenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/create_user_account" />

</TableLayout>